--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,12 +29,29 @@
         />
 
     <EditText
-        android:id="@+id/etSignUpEmail"
+        android:id="@+id/etSignUpName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="25dp"
         android:layout_below="@id/img1"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/round_et"
+        android:drawableLeft="@drawable/profile_svg"
+        android:drawablePadding="10dp"
+        android:fontFamily="@font/poppins_medium"
+        android:hint="Enter your name"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
+        android:paddingHorizontal="10dp" />
+
+    <EditText
+        android:id="@+id/etSignUpEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:layout_below="@id/etSignUpName"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/round_et"
         android:drawableLeft="@drawable/email"
@@ -61,19 +78,6 @@
         android:padding="12dp"
         android:paddingHorizontal="10dp" />
 
-    <Spinner
-        android:id="@+id/loginSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/etSignUpPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/poppins_medium"
-        android:layout_marginBottom="10dp"
-        />
-
     <Button
         android:id="@+id/submitBtn"
         android:layout_width="match_parent"
@@ -81,10 +85,10 @@
         android:layout_gravity="center"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/loginSpinner"
+        android:layout_below="@id/etSignUpPassword"
         android:background="@drawable/round_bg"
         android:fontFamily="@font/poppins_medium"
-        android:text="Login"
+        android:text="Sign Up"
         android:textAllCaps="false"
         android:textColor="@color/theme"
         android:textStyle="bold" />
@@ -96,8 +100,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/poppins_medium"
-        android:text="Don't Have An Account? Sign Up Now"
+        android:text="Already Have An Account? Login Now"
         android:textColor="@color/white" />
-
 
 </RelativeLayout>
