--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:text="Welcome to"
                 android:gravity="center"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:text="Feed the Need"
                 android:gravity="center"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="20dp"
@@ -58,7 +58,7 @@
             android:layout_marginTop="5dp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center"
-            android:text="Keep your data safe!"
+            android:text="We keep your data safe!"
             android:textSize="16dp" />
 
 
@@ -72,7 +72,7 @@
                 android:id="@+id/text_input_layout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp">
