--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -34,7 +34,9 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
         android:gravity="center"
+        android:fontFamily="@font/poppins_medium"
         android:text="Don’t be rude, donate some food"
+        android:onClick="nxtActivity"
         android:textColor="@color/white"
         android:textSize="16dp" />
 
