--- a/app/src/main/res/layout/provider_fragment_feedback.xml
+++ b/app/src/main/res/layout/provider_fragment_feedback.xml
@@ -10,21 +10,24 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <androidx.appcompat.widget.SearchView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="8"
-            android:background="@color/white" />
+    <androidx.appcompat.widget.SearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_weight="8"
+        />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
             android:layout_weight="2"
             android:background="@drawable/filter_icon"
-            android:paddingVertical="10dp" />
+            android:layout_marginHorizontal="15dp"
+            android:paddingVertical="10dp"
+            />
 
     </LinearLayout>
+
 
 
 </RelativeLayout>
