--- a/app/src/main/res/layout/activity_provider_register.xml
+++ b/app/src/main/res/layout/activity_provider_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ProviderLoginActivity">
+    tools:context=".LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:layout_height="150dp"
             android:src="@drawable/login_img"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="30dp"/>
 
 
 
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:text="Welcome to"
                 android:gravity="center"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="50dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:text="Feed the Need"
                 android:gravity="center"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="20dp"
@@ -58,7 +58,7 @@
             android:layout_marginTop="5dp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center"
-            android:text="Provider Login"
+            android:text="Keep your data safe!"
             android:textSize="16dp" />
 
 
@@ -72,7 +72,7 @@
                 android:id="@+id/text_input_layout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp">
@@ -99,7 +99,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:padding = "5dp"
                 android:layout_marginBottom="25dp">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -109,44 +108,12 @@
                     android:background="@drawable/splash_button"
                     android:drawableLeft="@drawable/ic_baseline_assignment_turned_in_24"
                     android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:hint="Password"
                     android:paddingTop="30dp"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
-                    android:paddingBottom="20dp"
-                    android:fontFamily="@font/poppins_medium"
-                    android:hint="Password" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"/>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/menu_drop"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/select"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="25dp"
-                android:background="@drawable/splash_button"
-                android:outlineSpotShadowColor="@color/green"
-                app:hintTextColor="@color/green"
-                android:textColorHint="@color/green"
-                app:boxStrokeColor="@color/green">
-
-                <AutoCompleteTextView
-                    android:id="@+id/drop_items"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:inputType="none"
-                    android:text="Choose your module"
-                    />
+                    android:paddingBottom="20dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
