--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
             android:layout_marginTop="5dp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center"
-            android:text="Customer Login"
+            android:text="Keep your data safe!"
             android:textSize="16dp" />
 
 
