--- a/app/src/main/res/layout/provider_fragment_food.xml
+++ b/app/src/main/res/layout/provider_fragment_food.xml
@@ -82,29 +82,31 @@
 
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input_layout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="25dp">
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/menu_drop"-->
+<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="Select Your Food Category"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:layout_marginRight="20dp"-->
+<!--            android:layout_marginBottom="25dp"-->
+<!--            android:background="@drawable/splash_button"-->
+<!--            android:outlineSpotShadowColor="@color/green"-->
+<!--            app:hintTextColor="@color/green"-->
+<!--            android:textColorHint="@color/green"-->
+<!--            app:boxStrokeColor="@color/green">-->
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_pass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/splash_button"
-                android:drawableLeft="@drawable/food_svg2"
-                android:drawablePadding="10dp"
-                android:fontFamily="@font/poppins_medium"
-                android:hint="Type of food"
-                android:paddingTop="30dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="20dp" />
+<!--            <AutoCompleteTextView-->
+<!--                android:id="@+id/drop_items"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_weight="1"-->
+<!--                android:inputType="none"-->
+<!--                android:text="Choose your module"-->
+<!--                />-->
 
-        </com.google.android.material.textfield.TextInputLayout>
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
 
 
@@ -149,6 +151,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/dateTimeLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -161,32 +164,80 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
-            android:layout_weight="8">
+            android:layout_marginRight="2dp"
+            android:layout_weight="1">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_pass2"
+                android:id="@+id/et_datepicker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/splash_button"
-                android:drawableLeft="@drawable/food_svg2"
+                android:drawableLeft="@drawable/datesvg"
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/poppins_medium"
-                android:hint="Type of food"
+                android:hint="Select Date"
                 android:paddingTop="30dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:paddingBottom="20dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
-<!--        <com.google.android.material.button.MaterialButton-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Select Date"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:padding="15dp"-->
-<!--            android:textSize="17dp"-->
-<!--            android:fontFamily="@font/poppins_semibold"-->
-<!--            android:backgroundTint="@color/green"/>-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etTimePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:layout_marginLeft="2dp"
+            android:layout_weight="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_timepicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/splash_button"
+                android:drawableLeft="@drawable/timesvg"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/poppins_medium"
+                android:hint="Select Time"
+                android:paddingTop="30dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="20dp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/dadsteTimeLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_below="@id/dateTimeLinearLayout">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etLocationOfFood"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editTextLocationOfFood"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/splash_button"
+                android:drawableLeft="@drawable/locationsvg"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/poppins_medium"
+                android:hint="Select Location for Pickup"
+                android:paddingTop="30dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="20dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
     </LinearLayout>
