--- a/app/src/main/res/layout/provider_fragment_food.xml
+++ b/app/src/main/res/layout/provider_fragment_food.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Helping the Needys"
+            android:text="Helping the Needy"
             android:gravity="center"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppins_semibold"
