--- a/app/src/main/res/layout/activity_customer_register.xml
+++ b/app/src/main/res/layout/activity_customer_register.xml
@@ -67,6 +67,9 @@
         android:orientation="vertical">
 
 
+
+
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout1"
             android:layout_width="match_parent"
@@ -146,10 +149,45 @@
             android:text="Sign Up"
             android:textColor="@color/white"
             android:padding="15dp"
-            android:layout_margin="40dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             android:textSize="17dp"
             android:fontFamily="@font/poppins_semibold"
             android:backgroundTint="@color/green"/>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="For Provider Register?"
+                android:fontFamily="@font/poppins_semibold"
+                android:textAlignment="center"
+                android:gravity="center_horizontal"/>
+
+            <TextView
+                android:id="@+id/provider_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Click here"
+                android:paddingLeft="5dp"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="@color/green"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"/>
+
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
@@ -173,6 +211,7 @@
             android:gravity="center_horizontal"/>
 
         <TextView
+            android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login"
