--- a/app/src/main/res/layout/provider_fragment_food.xml
+++ b/app/src/main/res/layout/provider_fragment_food.xml
@@ -208,7 +208,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/dadsteTimeLinearLayout"
+        android:id="@+id/locationLinerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -239,6 +239,37 @@
                 android:paddingBottom="20dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/categoryLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_below="@id/locationLinerLayout">
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/etSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp">
+
+        <Spinner
+            android:id="@+id/spinnerForType1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/splash_button"
+            android:drawablePadding="10dp"
+            android:fontFamily="@font/poppins_medium"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
