--- a/app/src/main/res/layout/layout_for_food_card.xml
+++ b/app/src/main/res/layout/layout_for_food_card.xml
@@ -79,7 +79,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="✅ Cooked/Non-coocked"
+                android:text="✅ Cooked/Non-cooked"
                 android:fontFamily="@font/poppins_medium"
                 android:layout_margin="5dp"
                 />
