--- a/app/src/main/res/layout/provider_fragment_feedback.xml
+++ b/app/src/main/res/layout/provider_fragment_feedback.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".provider.ui.ProviderFeedbackFragment">
 
     <androidx.appcompat.widget.SearchView
@@ -12,6 +13,8 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:scrollbarSize="20dp"
+        app:searchHintIcon="@color/black"
+        android:hint="Search Here"
         android:background="@drawable/search_bar"/>
 
 
