add new food layout

--- a/app/src/main/res/layout/provider_fragment_feedback.xml
+++ b/app/src/main/res/layout/provider_fragment_feedback.xml
@@ -61,6 +61,10 @@
 
             <include layout="@layout/feedback_layout" />
 
+            <include layout="@layout/feedback_layout" />
+
+            <include layout="@layout/feedback_layout" />
+
         </LinearLayout>
 
 
